# ate-features

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: execution.yaml  features.yaml  scoring.yaml  treatments.yaml
config/prompts/: communication_nudges.yaml
config/specializations/: serde_enums_and_stream_emission.md  serde_nested_and_stream_dedup.md  serde_pydantic_and_state_reducers.md  serde_types_and_state_channels.md
docs/: desiderata.md  experiment-design.md  findings.md  process.md
docs/phases/: phase-0-plan.md  phase-0-retro.md  phase-1-plan.md  phase-1-retro.md  phase-2-plan.md  phase-2-retro.md  phase-3-plan.md  phase-3-retro.md  phase-4-plan.md  phase-4-retro.md  phase-5-plan.md
docs/runbooks/: treatment-0a.md  treatment-0b.md  treatment-1.md  treatment-2a.md  treatment-2b.md  treatment-3.md  treatment-4.md  treatment-5.md  treatment-6.md  treatment-7.md  treatment-8.md
docs/runbooks-cumulative/: treatment-0a.md  treatment-0b.md  treatment-1.md  treatment-2a.md  treatment-2b.md  treatment-3.md  treatment-4.md  treatment-5.md  treatment-6.md  treatment-7.md  treatment-8.md
scripts/: pin_langgraph.sh  setup_langgraph.sh
src/ate_features/: __init__.py  cli.py  communication.py  config.py  harness.py  models.py  runbook.py  scoring.py
tests/acceptance/: conftest.py  test_f1_pandas_serde.py  test_f2_pydantic_roundtrip.py  test_f3_strenum_preservation.py  test_f4_nested_enum.py  test_f5_aliased_fields.py  test_f5_reducer_metadata.py  test_f6_dataclass_defaults.py  test_f6_default_factory.py  test_f7_end_routing.py  (+3 more)
(+21 files in other folders)
